--- a/pom.xml
+++ b/pom.xml
@@ -97,9 +97,9 @@
           <version>${flyway.version}</version>
           <configuration>
             <driver>org.postgresql.Driver</driver>
-            <url>jdbc:postgresql://localhost:5432/housing_db</url>
-            <user>admin</user>
-            <password>1234!</password>
+            <url>jdbc:postgresql://${db_url}</url>
+            <user>${db_username}</user>
+            <password>${db_password}</password>
             <schemas>
               <schema>public</schema>
             </schemas>
