--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 <!--      <version>1.7.26</version>-->
 <!--    </dependency>-->
     <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+      <version>2.9.9</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
