--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,16 @@
 <!--      <version>1.7.26</version>-->
 <!--    </dependency>-->
     <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.1</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.12</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-xml</artifactId>
       <version>2.9.9</version>
@@ -119,9 +129,9 @@
           <version>${flyway.version}</version>
           <configuration>
             <driver>org.postgresql.Driver</driver>
-            <url>jdbc:postgresql://${database.url}</url>
-            <user>${database.user}</user>
-            <password>${database.password}</password>
+            <url>jdbc:postgresql://${db_url}</url>
+            <user>${db_username}</user>
+            <password>${db_password}</password>
             <schemas>
               <schema>public</schema>
             </schemas>
